--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,40 +11,86 @@
               <div class="col-md-3 col-sm-6">
                 <div class="aa-footer-widget">
                   <h3>Main Menu</h3>
-                  <ul class="aa-footer-nav">
+
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Our Services</a></li>
                     <li><a href="#">Our Products</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
-                  </ul>
+
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
                 <div class="aa-footer-widget">
                   <div class="aa-footer-widget">
-                    <h3>Knowledge Base</h3>
-                    <ul class="aa-footer-nav">
-                      <li><a href="#">Delivery</a></li>
-                      <li><a href="#">Returns</a></li>
-                      <li><a href="#">Services</a></li>
-                      <li><a href="#">Discount</a></li>
-                      <li><a href="#">Special Offer</a></li>
-                    </ul>
+                    <h3>Services</h3>
+
+                 
+
                   </div>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
                 <div class="aa-footer-widget">
                   <div class="aa-footer-widget">
-                    <h3>Useful Links</h3>
-                    <ul class="aa-footer-nav">
-                      <li><a href="#">Site Map</a></li>
-                      <li><a href="#">Search</a></li>
-                      <li><a href="#">Advanced Search</a></li>
-                      <li><a href="#">Suppliers</a></li>
-                      <li><a href="#">FAQ</a></li>
-                    </ul>
+                    <h3>social links</h3>
+             
+ <div class="container">
+            <div class="row">
+
+ <div class="col-md-3 ">
+
+    <%= link_to "http://www.facebook.com" do %>
+        <%= image_tag ('about/facebook.png') ,:width=>'50',:height=>'50' %>
+    <% end %>
+
+                               </div>
+
+<div class="col-md-3 ">
+ <%= link_to "http://www.youtube.com" do %>
+        <%= image_tag ('about/hexagon-social-youtube.png') ,:width=>'50',:height=>'50' %>
+    <% end %>
+
+
+
+                               </div>
+<div class="col-md-3 ">
+ <%= link_to "http://www.twitter.com" do %>
+        <%= image_tag ('about/hexagon-twitter_1x.png') ,:width=>'50',:height=>'50' %>
+    <% end %>
+
+
+
+                               </div> 
+                               </div> 
+
+           <br> <div class="row">
+
+<div class="col-md-4 ">
+ <%= link_to "http://www.linkedin.com" do %>
+        <%= image_tag ('about/linkedin-hexagon-gloss-social-media-128.png') ,:width=>'50',:height=>'50' %>
+    <% end %>
+
+
+
+                               </div> 
+
+<div class="col-md-4 ">
+ <%= link_to "https://plus.google.com/" do %>
+        <%= image_tag ('about/google_plus-hexagon-social-media-256.png') ,:width=>'50',:height=>'50' %>
+    <% end %>
+
+
+
+
+                               </div>  
+
+
+ 
+                               </div>  
+                               </div>  
+
+       
                   </div>
                 </div>
               </div>
@@ -107,7 +153,7 @@
   color: #fff;
 }
 #aa-footer .aa-footer-top .aa-footer-top-area .aa-footer-widget .aa-footer-nav li a {
-  color: #888;
+  color: red;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -ms-transition: all 0.5s;
