--- a/app/views/favs/show.html.erb
+++ b/app/views/favs/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Favs#show</h1>
-<p>Find me in app/views/favs/show.html.erb</p>
+<div id="service-text">
+<h4>Website development</h4>
+<p>Your website deserves the best; after all, it is the internet advertising billboard for you and your company. Whether you're ready to start today, or still need some guidance. We'll find the right web solution for you.</p>
+<p>The Internet is the new medium for promoting and selling your products and services to customers across the globe. A Good designed website is therefore the most important tool to attract customers. A Good website design must have visual appeal, user friendliness, rich content and above all, be search engine optimized in order to attract & retain visitors</p>
+<p>
+Our group has the young coding heads and the designers to make intuitive, connecting, engaging and user friendly sites for your brand. Be it a static HTML based sites, Database driven E-commerce websites or Corporate sites, we convey easy to understand and deliver result oriented search friendly websites.</p>
+<p>Website design & website content matters a lot as it speaks about your business culture, services or products. Our expert developers and designers give a complete balance of matter and design for a perfect website designing and development as they are well versed with how content precedes design and design in the absence of content is not design, its decoration.1234</p>
+
+</div>
+
