--- a/app/views/favs/show.html.erb
+++ b/app/views/favs/show.html.erb
@@ -4,7 +4,7 @@
 <p>The Internet is the new medium for promoting and selling your products and services to customers across the globe. A Good designed website is therefore the most important tool to attract customers. A Good website design must have visual appeal, user friendliness, rich content and above all, be search engine optimized in order to attract & retain visitors</p>
 <p>
 Our group has the young coding heads and the designers to make intuitive, connecting, engaging and user friendly sites for your brand. Be it a static HTML based sites, Database driven E-commerce websites or Corporate sites, we convey easy to understand and deliver result oriented search friendly websites.</p>
-<p>Website design & website content matters a lot as it speaks about your business culture, services or products. Our expert developers and designers give a complete balance of matter and design for a perfect website designing and development as they are well versed with how content precedes design and design in the absence of content is not design, its decoration.1234</p>
+<p>Website design & website content matters a lot as it speaks about your business culture, services or products. Our expert developers and designers give a complete balance of matter and design for a perfect website designing and development as they are well versed with how content precedes design and design in the absence of content is not design, its decoration.</p>
 
 </div>
 
